初步认识了深度学习的代码

--- a/pytorch-lightning_ipynb/cnn/cnn-alexnet-cifar10.ipynb
+++ b/pytorch-lightning_ipynb/cnn/cnn-alexnet-cifar10.ipynb
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "id": "c5d908c1",
    "metadata": {
     "pycharm": {
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "id": "87a0d60b",
    "metadata": {
     "pycharm": {
@@ -831,7 +831,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[54], line 5\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# %load ../code_lightningmodule/trainer_nb_basic.py\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtime\u001B[39;00m\n\u001B[1;32m----> 5\u001B[0m trainer \u001B[38;5;241m=\u001B[39m pl\u001B[38;5;241m.\u001B[39mTrainer(\n\u001B[0;32m      6\u001B[0m     max_epochs\u001B[38;5;241m=\u001B[39mNUM_EPOCHS,\n\u001B[0;32m      7\u001B[0m     callbacks\u001B[38;5;241m=\u001B[39mcallbacks,\n\u001B[0;32m      8\u001B[0m     progress_bar_refresh_rate\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m,  \u001B[38;5;66;03m# recommended for notebooks\u001B[39;00m\n\u001B[0;32m      9\u001B[0m     accelerator\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mGPUs\u001B[39m\u001B[38;5;124m\"\u001B[39m,  \u001B[38;5;66;03m# Uses GPUs or TPUs if available\u001B[39;00m\n\u001B[0;32m     10\u001B[0m     devices\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mauto\u001B[39m\u001B[38;5;124m\"\u001B[39m,  \u001B[38;5;66;03m# Uses all available GPUs/TPUs if applicable\u001B[39;00m\n\u001B[0;32m     11\u001B[0m     logger\u001B[38;5;241m=\u001B[39mlogger,\n\u001B[0;32m     12\u001B[0m     deterministic\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[0;32m     13\u001B[0m     log_every_n_steps\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m,\n\u001B[0;32m     14\u001B[0m )\n\u001B[0;32m     16\u001B[0m start_time \u001B[38;5;241m=\u001B[39m time\u001B[38;5;241m.\u001B[39mtime()\n\u001B[0;32m     17\u001B[0m trainer\u001B[38;5;241m.\u001B[39mfit(model\u001B[38;5;241m=\u001B[39mlightning_model, datamodule\u001B[38;5;241m=\u001B[39mdata_module)\n",
+      "Cell \u001B[1;32mIn[61], line 5\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# %load ../code_lightningmodule/trainer_nb_basic.py\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtime\u001B[39;00m\n\u001B[1;32m----> 5\u001B[0m trainer \u001B[38;5;241m=\u001B[39m pl\u001B[38;5;241m.\u001B[39mTrainer(\n\u001B[0;32m      6\u001B[0m     max_epochs\u001B[38;5;241m=\u001B[39mNUM_EPOCHS,\n\u001B[0;32m      7\u001B[0m     callbacks\u001B[38;5;241m=\u001B[39mcallbacks,\n\u001B[0;32m      8\u001B[0m     progress_bar_refresh_rate\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m50\u001B[39m,  \u001B[38;5;66;03m# recommended for notebooks\u001B[39;00m\n\u001B[0;32m      9\u001B[0m     accelerator\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mauto\u001B[39m\u001B[38;5;124m\"\u001B[39m,  \u001B[38;5;66;03m# Uses GPUs or TPUs if available\u001B[39;00m\n\u001B[0;32m     10\u001B[0m     devices\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mauto\u001B[39m\u001B[38;5;124m\"\u001B[39m,  \u001B[38;5;66;03m# Uses all available GPUs/TPUs if applicable\u001B[39;00m\n\u001B[0;32m     11\u001B[0m     logger\u001B[38;5;241m=\u001B[39mlogger,\n\u001B[0;32m     12\u001B[0m     deterministic\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[0;32m     13\u001B[0m     log_every_n_steps\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m,\n\u001B[0;32m     14\u001B[0m )\n\u001B[0;32m     16\u001B[0m start_time \u001B[38;5;241m=\u001B[39m time\u001B[38;5;241m.\u001B[39mtime()\n\u001B[0;32m     17\u001B[0m trainer\u001B[38;5;241m.\u001B[39mfit(model\u001B[38;5;241m=\u001B[39mlightning_model, datamodule\u001B[38;5;241m=\u001B[39mdata_module)\n",
       "File \u001B[1;32mC:\\BasicApplication\\Anaconda\\Lib\\site-packages\\pytorch_lightning\\utilities\\argparse.py:70\u001B[0m, in \u001B[0;36m_defaults_from_env_vars.<locals>.insert_env_defaults\u001B[1;34m(self, *args, **kwargs)\u001B[0m\n\u001B[0;32m     67\u001B[0m kwargs \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mdict\u001B[39m(\u001B[38;5;28mlist\u001B[39m(env_variables\u001B[38;5;241m.\u001B[39mitems()) \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mlist\u001B[39m(kwargs\u001B[38;5;241m.\u001B[39mitems()))\n\u001B[0;32m     69\u001B[0m \u001B[38;5;66;03m# all args were already moved to kwargs\u001B[39;00m\n\u001B[1;32m---> 70\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m fn(\u001B[38;5;28mself\u001B[39m, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
       "\u001B[1;31mTypeError\u001B[0m: Trainer.__init__() got an unexpected keyword argument 'progress_bar_refresh_rate'"
      ]
@@ -845,8 +845,8 @@
     "trainer = pl.Trainer(\n",
     "    max_epochs=NUM_EPOCHS,\n",
     "    callbacks=callbacks,\n",
-    "    progress_bar_refresh_rate=10,  # recommended for notebooks\n",
-    "    accelerator=\"GPUs\",  # Uses GPUs or TPUs if available\n",
+    "    progress_bar_refresh_rate=50,  # recommended for notebooks\n",
+    "    accelerator=\"auto\",  # Uses GPUs or TPUs if available\n",
     "    devices=\"auto\",  # Uses all available GPUs/TPUs if applicable\n",
     "    logger=logger,\n",
     "    deterministic=False,\n",
